feat: add audio duration to dataset statistics and reporting

--- a/data_prepare/split_sentences_stats.ipynb
+++ b/data_prepare/split_sentences_stats.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CONFIGURATION\n",
-    "DATA_DIR = '../datalocal/processed/v1'  # Change this to your segmented output directory\n",
-    "REPORT_PATH = '../reports/dataset_stats.json'\n",
+    "DATA_DIR = '../datalocal/v260210_24kHz/readtext_split'  # Change this to your segmented output directory\n",
+    "REPORT_PATH = '../reports/dataset_readtext_stats.json'\n",
     "\n",
     "if not Path(DATA_DIR).exists():\n",
     "    print(f\"Warning: DATA_DIR {DATA_DIR} not found. Please run split_sentences.py first.\")"
@@ -41,9 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total items found: 499\n",
+      "Valid triples: 499\n"
+     ]
+    }
+   ],
    "source": [
     "# VALIDATION\n",
     "results = validate_triples(DATA_DIR)\n",
@@ -58,9 +67,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- DATASET STATISTICS ---\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>files</th>\n",
+       "      <th>sentences</th>\n",
+       "      <th>words</th>\n",
+       "      <th>duration_sec</th>\n",
+       "      <th>formatted_duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>total</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>499.0</td>\n",
+       "      <td>3600.0</td>\n",
+       "      <td>1811.751125</td>\n",
+       "      <td>00:30:11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hc</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>244.0</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>880.919542</td>\n",
+       "      <td>00:14:40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pd</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>255.0</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>930.831583</td>\n",
+       "      <td>00:15:30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       files  sentences   words  duration_sec formatted_duration\n",
+       "total  100.0      499.0  3600.0   1811.751125           00:30:11\n",
+       "hc      50.0      244.0  1800.0    880.919542           00:14:40\n",
+       "pd      50.0      255.0  1800.0    930.831583           00:15:30"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -70,7 +155,37 @@
     "print(\"\\n--- DATASET STATISTICS ---\")\n",
     "\n",
     "df_stats = pd.DataFrame(stats).T\n",
+    "\n",
+    "# Add human-readable duration column\n",
+    "def format_duration(seconds):\n",
+    "    h = int(seconds // 3600)\n",
+    "    m = int((seconds % 3600) // 60)\n",
+    "    s = int(seconds % 60)\n",
+    "    return f\"{h:02d}:{m:02d}:{s:02d}\"\n",
+    "\n",
+    "df_stats['formatted_duration'] = df_stats['duration_sec'].apply(format_duration)\n",
+    "\n",
     "display(df_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Report saved to ../reports/dataset_readtext_stats.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SAVE REPORT\n",
+    "save_report(stats, REPORT_PATH)\n",
+    "print(f\"\\nReport saved to {REPORT_PATH}\")"
    ]
   },
   {
@@ -78,16 +193,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# SAVE REPORT\n",
-    "save_report(stats, REPORT_PATH)\n",
-    "print(f\"\\nReport saved to {REPORT_PATH}\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -101,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
