--- a/data_prepare/split_sentences_stats.ipynb
+++ b/data_prepare/split_sentences_stats.ipynb
@@ -22,7 +22,7 @@
     "# Add project root to sys.path\n",
     "sys.path.append(os.path.abspath('..'))\n",
     "\n",
-    "from data_prepare.stats import compute_statistics, save_report, validate_triples"
+    "from data_prepare.stats import compute_statistics, save_report, validate_triples, get_silence_durations"
    ]
   },
   {
@@ -193,7 +193,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "\n",
+    "# SILENCE ANALYSIS\n",
+    "silences = get_silence_durations(DATA_DIR, results['valid_stems'])\n",
+    "\n",
+    "for key in ['leading', 'trailing']:\n",
+    "    data = silences[key]\n",
+    "    print(f\"\\n--- {key.capitalize()} Silence Stats ---\")\n",
+    "    print(f\"Min: {np.min(data):.4f}s\")\n",
+    "    print(f\"Max: {np.max(data):.4f}s\")\n",
+    "    print(f\"Mean: {np.mean(data):.4f}s\")\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "sns.histplot(silences['leading'], bins=30, ax=axes[0], kde=True, color='blue')\n",
+    "axes[0].set_title('Distribution of Leading Silence')\n",
+    "axes[0].set_xlabel('Duration (seconds)')\n",
+    "\n",
+    "sns.histplot(silences['trailing'], bins=30, ax=axes[1], kde=True, color='green')\n",
+    "axes[1].set_title('Distribution of Trailing Silence')\n",
+    "axes[1].set_xlabel('Duration (seconds)')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
