--- a/data_prepare/check_alignment.ipynb
+++ b/data_prepare/check_alignment.ipynb
@@ -4,10 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Alignment Checker
-",
-    "
-",
+    "# Alignment Checker\\n",
+    "\\n",
     "This notebook allows you to interactively check the audio-to-phoneme alignment for segmented recordings."
    ]
   },
@@ -17,34 +15,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os
-",
-    "import sys
-",
-    "from pathlib import Path
-",
-    "import numpy as np
-",
-    "import pandas as pd
-",
-    "import librosa
-",
-    "import librosa.display
-",
-    "import matplotlib.pyplot as plt
-",
-    "import ipywidgets as widgets
-",
-    "from IPython.display import Audio, display
-",
-    "
-",
-    "# Add project root to sys.path
-",
-    "sys.path.append(os.path.abspath('..'))
-",
-    "
-",
+    "import os\\n",
+    "import sys\\n",
+    "from pathlib import Path\\n",
+    "import numpy as np\\n",
+    "import pandas as pd\\n",
+    "import librosa\\n",
+    "import librosa.display\\n",
+    "import matplotlib.pyplot as plt\\n",
+    "import ipywidgets as widgets\\n",
+    "from IPython.display import Audio, display\\n",
+    "\\n",
+    "# Add project root to sys.path\\n",
+    "sys.path.append(os.path.abspath('..'))\\n",
+    "\\n",
     "from data_prepare.audio_utils import get_sampling_rate"
    ]
   },
@@ -54,15 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CONFIGURATION
-",
-    "DATA_DIR = '../datalocal/v260210_24kHz/readtext_split'
-",
-    "
-",
-    "if not Path(DATA_DIR).exists():
-",
-    "    print(f"Warning: DATA_DIR {DATA_DIR} not found. Please run the segmentation script first.")"
+    "# CONFIGURATION\\n",
+    "DATA_DIR = '../datalocal/v260210_24kHz/readtext_split'\\n",
+    "\\n",
+    "if not Path(DATA_DIR).exists():\\n",
+    "    print(f\"Warning: DATA_DIR {DATA_DIR} not found. Please run the segmentation script first.\")"
    ]
   },
   {
@@ -71,58 +51,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_speaker_data(data_dir):
-",
-    "    data_dir = Path(data_dir)
-",
-    "    all_files = list(data_dir.glob("*.wav"))
-",
-    "    
-",
-    "    # Group by speaker (e.g., 001PD)
-",
-    "    speakers = {}
-",
-    "    for f in all_files:
-",
-    "        speaker_id = f.stem.split('_')[0]
-",
-    "        if speaker_id not in speakers:
-",
-    "            speakers[speaker_id] = []
-",
-    "        
-",
-    "        # Get text for duration/stats
-",
-    "        txt_path = f.with_suffix('.txt')
-",
-    "        text = ""
-",
-    "        if txt_path.exists():
-",
-    "            with open(txt_path, 'r', encoding='utf-8') as tf:
-",
-    "                text = tf.read()
-",
-    "        
-",
-    "        speakers[speaker_id].append({
-",
-    "            'stem': f.stem,
-",
-    "            'text': text
-",
-    "        })
-",
-    "    
-",
-    "    return speakers
-",
-    "
-",
-    "SPEAKER_DATA = get_speaker_data(DATA_DIR)
-",
+    "def get_speaker_data(data_dir):\\n",
+    "    data_dir = Path(data_dir)\\n",
+    "    all_files = list(data_dir.glob(\"*.wav\"))\\n",
+    "    \\n",
+    "    # Group by speaker (e.g., 001PD)\\n",
+    "    speakers = {}\\n",
+    "    for f in all_files:\\n",
+    "        speaker_id = f.stem.split('_')[0]\\n",
+    "        if speaker_id not in speakers:\\n",
+    "            speakers[speaker_id] = []\\n",
+    "        \\n",
+    "        # Get text for duration/stats\\n",
+    "        txt_path = f.with_suffix('.txt')\\n",
+    "        text = \"\"\\n",
+    "        if txt_path.exists():\\n",
+    "            with open(txt_path, 'r', encoding='utf-8') as tf:\\n",
+    "                text = tf.read()\\n",
+    "        \\n",
+    "        speakers[speaker_id].append({\\n",
+    "            'stem': f.stem,\\n",
+    "            'text': text\\n",
+    "        })\\n",
+    "    \\n",
+    "    return speakers\\n",
+    "\\n",
+    "SPEAKER_DATA = get_speaker_data(DATA_DIR)\\n",
     "SPEAKER_LIST = sorted(list(SPEAKER_DATA.keys()))"
    ]
   },
@@ -132,132 +86,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_alignment(stem):
-",
-    "    wav_path = Path(DATA_DIR) / f"{stem}.wav"
-",
-    "    csv_path = Path(DATA_DIR) / f"{stem}.csv"
-",
-    "    
-",
-    "    if not wav_path.exists() or not csv_path.exists():
-",
-    "        print(f"Error: Missing files for {stem}")
-",
-    "        return
-",
-    "    
-",
-    "    # Load audio
-",
-    "    y, sr = librosa.load(wav_path, sr=None)
-",
-    "    duration = len(y) / sr
-",
-    "    
-",
-    "    # Load alignment
-",
-    "    df = pd.read_csv(csv_path, sep=';')
-",
-    "    
-",
-    "    # Create figure
-",
-    "    fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(15, 8), sharex=True)
-",
-    "    
-",
-    "    # 1. Waveform
-",
-    "    librosa.display.waveshow(y, sr=sr, ax=ax1, alpha=0.5)
-",
-    "    ax1.set_title(f"Alignment for {stem}")
-",
-    "    ax1.set_ylabel("Amplitude")
-",
-    "    
-",
-    "    # 2. Spectrogram
-",
-    "    D = librosa.amplitude_to_db(np.abs(librosa.stft(y)), ref=np.max)
-",
-    "    img = librosa.display.specshow(D, sr=sr, x_axis='time', y_axis='hz', ax=ax2)
-",
-    "    ax2.set_ylabel("Hz")
-",
-    "    
-",
-    "    # Draw boundaries and labels
-",
-    "    # Words (unique tokens)
-",
-    "    word_boundaries = df.groupby('TOKEN').agg({'BEGIN': 'min', 'DURATION': 'sum', 'ORT': 'first'}).reset_index()
-",
-    "    word_boundaries = word_boundaries[word_boundaries['TOKEN'] >= 0]
-",
-    "    
-",
-    "    # Vertical lines for phonemes (MAU)
-",
-    "    for _, row in df.iterrows():
-",
-    "        start_sec = row['BEGIN'] / sr
-",
-    "        end_sec = (row['BEGIN'] + row['DURATION']) / sr
-",
-    "        
-",
-    "        # Phoneme boundary (dashed)
-",
-    "        ax1.axvline(start_sec, color='gray', linestyle='--', alpha=0.3)
-",
-    "        ax2.axvline(start_sec, color='white', linestyle='--', alpha=0.3)
-",
-    "        
-",
-    "        # Label phoneme
-",
-    "        mid_sec = start_sec + (row['DURATION'] / (2 * sr))
-",
-    "        ax1.text(mid_sec, 0.8, row['MAU'], color='red', fontsize=8, horizontalalignment='center')
-",
-    "
-",
-    "    # Vertical lines for words (TOKEN)
-",
-    "    for _, row in word_boundaries.iterrows():
-",
-    "        start_sec = row['BEGIN'] / sr
-",
-    "        end_sec = (row['BEGIN'] + row['DURATION']) / sr
-",
-    "        
-",
-    "        # Word boundary (solid)
-",
-    "        ax1.axvline(start_sec, color='blue', linewidth=2, alpha=0.6)
-",
-    "        ax2.axvline(start_sec, color='cyan', linewidth=2, alpha=0.6)
-",
-    "        
-",
-    "        # Label word
-",
-    "        mid_sec = start_sec + (row['DURATION'] / (2 * sr))
-",
-    "        ax1.text(mid_sec, -0.9, row['ORT'], color='blue', fontsize=12, fontweight='bold', horizontalalignment='center')
-",
-    "
-",
-    "    plt.tight_layout()
-",
-    "    plt.show()
-",
-    "    
-",
-    "    # Audio player
-",
+    "def plot_alignment(stem):\\n",
+    "    wav_path = Path(DATA_DIR) / f\"{stem}.wav\"\\n",
+    "    csv_path = Path(DATA_DIR) / f\"{stem}.csv\"\\n",
+    "    \\n",
+    "    if not wav_path.exists() or not csv_path.exists():\\n",
+    "        print(f\"Error: Missing files for {stem}\")\\n",
+    "        return\\n",
+    "    \\n",
+    "    # Load audio\\n",
+    "    y, sr = librosa.load(wav_path, sr=None)\\n",
+    "    \\n",
+    "    # Load alignment\\n",
+    "    df = pd.read_csv(csv_path, sep=';')\\n",
+    "    \\n",
+    "    # Create figure\\n",
+    "    fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(15, 8), sharex=True)\\n",
+    "    \\n",
+    "    # 1. Waveform\\n",
+    "    librosa.display.waveshow(y, sr=sr, ax=ax1, alpha=0.5)\\n",
+    "    ax1.set_title(f\"Alignment for {stem}\")\\n",
+    "    ax1.set_ylabel(\"Amplitude\")\\n",
+    "    \\n",
+    "    # 2. Spectrogram\\n",
+    "    D = librosa.amplitude_to_db(np.abs(librosa.stft(y)), ref=np.max)\\n",
+    "    img = librosa.display.specshow(D, sr=sr, x_axis='time', y_axis='hz', ax=ax2)\\n",
+    "    ax2.set_ylabel(\"Hz\")\\n",
+    "    \\n",
+    "    # Draw boundaries and labels\\n",
+    "    word_boundaries = df.groupby('TOKEN').agg({'BEGIN': 'min', 'DURATION': 'sum', 'ORT': 'first'}).reset_index()\\n",
+    "    word_boundaries = word_boundaries[word_boundaries['TOKEN'] >= 0]\\n",
+    "    \\n",
+    "    for _, row in df.iterrows():\\n",
+    "        start_sec = row['BEGIN'] / sr\\n",
+    "        ax1.axvline(start_sec, color='gray', linestyle='--', alpha=0.3)\\n",
+    "        ax2.axvline(start_sec, color='white', linestyle='--', alpha=0.3)\\n",
+    "        mid_sec = start_sec + (row['DURATION'] / (2 * sr))\\n",
+    "        ax1.text(mid_sec, 0.8, row['MAU'], color='red', fontsize=8, horizontalalignment='center')\\n",
+    "\\n",
+    "    for _, row in word_boundaries.iterrows():\\n",
+    "        start_sec = row['BEGIN'] / sr\\n",
+    "        ax1.axvline(start_sec, color='blue', linewidth=2, alpha=0.6)\\n",
+    "        ax2.axvline(start_sec, color='cyan', linewidth=2, alpha=0.6)\\n",
+    "        mid_sec = start_sec + (row['DURATION'] / (2 * sr))\\n",
+    "        ax1.text(mid_sec, -0.9, row['ORT'], color='blue', fontsize=12, fontweight='bold', horizontalalignment='center')\\n",
+    "\\n",
+    "    plt.tight_layout()\\n",
+    "    plt.show()\\n",
     "    display(Audio(y, rate=sr))"
    ]
   },
@@ -267,64 +142,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# INTERACTIVE WIDGETS
-",
-    "speaker_select = widgets.Dropdown(options=SPEAKER_LIST, description='Speaker:')
-",
-    "segment_select = widgets.Dropdown(description='Segment:')
-",
-    "output_plot = widgets.Output()
-",
-    "output_table = widgets.Output()
-",
-    "
-",
-    "def update_segments(*args):
-",
-    "    speaker_id = speaker_select.value
-",
-    "    segments = SPEAKER_DATA[speaker_id]
-",
-    "    segment_select.options = [s['stem'] for s in segments]
-",
-    "    
-",
-    "    # Show summary table for speaker
-",
-    "    with output_table:
-",
-    "        output_table.clear_output()
-",
-    "        df_summary = pd.DataFrame(segments)
-",
-    "        display(df_summary)
-",
-    "
-",
-    "def on_selection_change(change):
-",
-    "    with output_plot:
-",
-    "        output_plot.clear_output(wait=True)
-",
-    "        if segment_select.value:
-",
-    "            plot_alignment(segment_select.value)
-",
-    "
-",
-    "speaker_select.observe(update_segments, 'value')
-",
-    "segment_select.observe(on_selection_change, 'value')
-",
-    "
-",
-    "# Initialize
-",
-    "update_segments()
-",
-    "
-",
+    "# INTERACTIVE WIDGETS\\n",
+    "speaker_select = widgets.Dropdown(options=SPEAKER_LIST, description='Speaker:')\\n",
+    "segment_select = widgets.Dropdown(description='Segment:')\\n",
+    "output_plot = widgets.Output()\\n",
+    "output_table = widgets.Output()\\n",
+    "\\n",
+    "def update_segments(*args):\\n",
+    "    speaker_id = speaker_select.value\\n",
+    "    segments = SPEAKER_DATA[speaker_id]\\n",
+    "    segment_select.options = [s['stem'] for s in segments]\\n",
+    "    with output_table:\\n",
+    "        output_table.clear_output()\\n",
+    "        df_summary = pd.DataFrame(segments)\\n",
+    "        display(df_summary)\\n",
+    "\\n",
+    "def on_selection_change(change):\\n",
+    "    with output_plot:\\n",
+    "        output_plot.clear_output(wait=True)\\n",
+    "        if segment_select.value:\\n",
+    "            plot_alignment(segment_select.value)\\n",
+    "\\n",
+    "speaker_select.observe(update_segments, 'value')\\n",
+    "segment_select.observe(on_selection_change, 'value')\\n",
+    "update_segments()\\n",
     "display(widgets.VBox([speaker_select, segment_select, output_table, output_plot]))"
    ]
   }
