fix: show pauses as separate units in check_alignment.ipynb

--- a/data_prepare/check_alignment.ipynb
+++ b/data_prepare/check_alignment.ipynb
@@ -113,9 +113,7 @@
     "    ax2.set_ylabel(\"Hz\")\n",
     "    \n",
     "    # Draw boundaries and labels\n",
-    "    word_boundaries = df.groupby('TOKEN').agg({'BEGIN': 'min', 'DURATION': 'sum', 'ORT': 'first'}).reset_index()\n",
-    "    word_boundaries = word_boundaries[word_boundaries['TOKEN'] >= 0]\n",
-    "    \n",
+    "    # Phoneme boundaries (MAU)\n",
     "    for _, row in df.iterrows():\n",
     "        start_sec = row['BEGIN'] / sr\n",
     "        ax1.axvline(start_sec, color='gray', linestyle='--', alpha=0.3)\n",
@@ -123,12 +121,33 @@
     "        mid_sec = start_sec + (row['DURATION'] / (2 * sr))\n",
     "        ax1.text(mid_sec, 0.8, row['MAU'], color='red', fontsize=8, horizontalalignment='center')\n",
     "\n",
+    "    # Word/Pause boundaries (TOKEN contiguous blocks)\n",
+    "    df['block'] = (df['TOKEN'] != df['TOKEN'].shift()).cumsum()\n",
+    "    word_boundaries = df.groupby(['block', 'TOKEN']).agg({\n",
+    "        'BEGIN': 'min', \n",
+    "        'DURATION': 'sum', \n",
+    "        'ORT': 'first'\n",
+    "    }).reset_index()\n",
+    "    \n",
     "    for _, row in word_boundaries.iterrows():\n",
     "        start_sec = row['BEGIN'] / sr\n",
-    "        ax1.axvline(start_sec, color='blue', linewidth=2, alpha=0.6)\n",
-    "        ax2.axvline(start_sec, color='cyan', linewidth=2, alpha=0.6)\n",
+    "        end_sec = (row['BEGIN'] + row['DURATION']) / sr\n",
+    "        \n",
+    "        # Determine label (handle pauses)\n",
+    "        label = str(row['ORT']) if row['TOKEN'] >= 0 else '<p:>'\n",
+    "        color = 'blue' if row['TOKEN'] >= 0 else 'green'\n",
+    "        \n",
+    "        # Word/Pause boundary (solid)\n",
+    "        ax1.axvline(start_sec, color=color, linewidth=2, alpha=0.6)\n",
+    "        ax2.axvline(start_sec, color='cyan' if row['TOKEN'] >= 0 else 'lightgreen', linewidth=2, alpha=0.6)\n",
+    "        \n",
+    "        # Label word/pause\n",
     "        mid_sec = start_sec + (row['DURATION'] / (2 * sr))\n",
-    "        ax1.text(mid_sec, -0.9, row['ORT'], color='blue', fontsize=12, fontweight='bold', horizontalalignment='center')\n",
+    "        ax1.text(mid_sec, -0.9, label, color=color, fontsize=12, fontweight='bold', horizontalalignment='center')\n",
+    "\n",
+    "    # Final boundary line\n",
+    "    ax1.axvline(len(y)/sr, color='gray', linestyle='--', alpha=0.3)\n",
+    "    ax2.axvline(len(y)/sr, color='white', linestyle='--', alpha=0.3)\n",
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
