fix: reposition phoneme labels above word labels in check_alignment.ipynb

--- a/data_prepare/check_alignment.ipynb
+++ b/data_prepare/check_alignment.ipynb
@@ -118,8 +118,10 @@
     "        start_sec = row['BEGIN'] / sr\n",
     "        ax1.axvline(start_sec, color='gray', linestyle='--', alpha=0.3)\n",
     "        ax2.axvline(start_sec, color='white', linestyle='--', alpha=0.3)\n",
+    "        \n",
+    "        # Label phoneme - positioned at y=-0.6 (bottom area of waveform plot)\n",
     "        mid_sec = start_sec + (row['DURATION'] / (2 * sr))\n",
-    "        ax1.text(mid_sec, 0.8, row['MAU'], color='red', fontsize=8, horizontalalignment='center')\n",
+    "        ax1.text(mid_sec, -0.6, row['MAU'], color='red', fontsize=9, horizontalalignment='center')\n",
     "\n",
     "    # Word/Pause boundaries (TOKEN contiguous blocks)\n",
     "    df['block'] = (df['TOKEN'] != df['TOKEN'].shift()).cumsum()\n",
@@ -131,7 +133,6 @@
     "    \n",
     "    for _, row in word_boundaries.iterrows():\n",
     "        start_sec = row['BEGIN'] / sr\n",
-    "        end_sec = (row['BEGIN'] + row['DURATION']) / sr\n",
     "        \n",
     "        # Determine label (handle pauses)\n",
     "        label = str(row['ORT']) if row['TOKEN'] >= 0 else '<p:>'\n",
@@ -141,7 +142,7 @@
     "        ax1.axvline(start_sec, color=color, linewidth=2, alpha=0.6)\n",
     "        ax2.axvline(start_sec, color='cyan' if row['TOKEN'] >= 0 else 'lightgreen', linewidth=2, alpha=0.6)\n",
     "        \n",
-    "        # Label word/pause\n",
+    "        # Label word/pause - positioned at y=-0.9 (bottom of waveform plot)\n",
     "        mid_sec = start_sec + (row['DURATION'] / (2 * sr))\n",
     "        ax1.text(mid_sec, -0.9, label, color=color, fontsize=12, fontweight='bold', horizontalalignment='center')\n",
     "\n",
