fix: resolve double output in check_alignment.ipynb

--- a/data_prepare/check_alignment.ipynb
+++ b/data_prepare/check_alignment.ipynb
@@ -23,7 +23,7 @@
     "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
-    "from IPython.display import Audio, display\n",
+    "from IPython.display import Audio, display, clear_output\n",
     "\n",
     "# Add project root to sys.path\n",
     "sys.path.append(os.path.abspath('..'))\n",
@@ -52,16 +52,14 @@
    "source": [
     "def get_speaker_data(data_dir):\n",
     "    data_dir = Path(data_dir)\n",
-    "    all_files = list(data_dir.glob(\"*.wav\"))\n",
+    "    all_files = sorted(list(data_dir.glob(\"*.wav\")))\n",
     "    \n",
-    "    # Group by speaker (e.g., 001PD)\n",
     "    speakers = {}\n",
     "    for f in all_files:\n",
     "        speaker_id = f.stem.split('_')[0]\n",
     "        if speaker_id not in speakers:\n",
     "            speakers[speaker_id] = []\n",
     "        \n",
-    "        # Get text for duration/stats\n",
     "        txt_path = f.with_suffix('.txt')\n",
     "        text = \"\"\n",
     "        if txt_path.exists():\n",
@@ -93,37 +91,26 @@
     "        print(f\"Error: Missing files for {stem}\")\n",
     "        return\n",
     "    \n",
-    "    # Load audio\n",
     "    y, sr = librosa.load(wav_path, sr=None)\n",
-    "    \n",
-    "    # Load alignment\n",
     "    df = pd.read_csv(csv_path, sep=';')\n",
     "    \n",
-    "    # Create figure\n",
     "    fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(15, 8), sharex=True)\n",
     "    \n",
-    "    # 1. Waveform\n",
     "    librosa.display.waveshow(y, sr=sr, ax=ax1, alpha=0.5)\n",
     "    ax1.set_title(f\"Alignment for {stem}\")\n",
     "    ax1.set_ylabel(\"Amplitude\")\n",
     "    \n",
-    "    # 2. Spectrogram\n",
     "    D = librosa.amplitude_to_db(np.abs(librosa.stft(y)), ref=np.max)\n",
-    "    img = librosa.display.specshow(D, sr=sr, x_axis='time', y_axis='hz', ax=ax2)\n",
+    "    librosa.display.specshow(D, sr=sr, x_axis='time', y_axis='hz', ax=ax2)\n",
     "    ax2.set_ylabel(\"Hz\")\n",
     "    \n",
-    "    # Draw boundaries and labels\n",
-    "    # Phoneme boundaries (MAU)\n",
     "    for _, row in df.iterrows():\n",
     "        start_sec = row['BEGIN'] / sr\n",
     "        ax1.axvline(start_sec, color='gray', linestyle='--', alpha=0.3)\n",
     "        ax2.axvline(start_sec, color='white', linestyle='--', alpha=0.3)\n",
-    "        \n",
-    "        # Label phoneme - positioned at y=-0.6 (bottom area of waveform plot)\n",
     "        mid_sec = start_sec + (row['DURATION'] / (2 * sr))\n",
     "        ax1.text(mid_sec, -0.6, row['MAU'], color='red', fontsize=9, horizontalalignment='center')\n",
     "\n",
-    "    # Word/Pause boundaries (TOKEN contiguous blocks)\n",
     "    df['block'] = (df['TOKEN'] != df['TOKEN'].shift()).cumsum()\n",
     "    word_boundaries = df.groupby(['block', 'TOKEN']).agg({\n",
     "        'BEGIN': 'min', \n",
@@ -133,25 +120,21 @@
     "    \n",
     "    for _, row in word_boundaries.iterrows():\n",
     "        start_sec = row['BEGIN'] / sr\n",
-    "        \n",
-    "        # Determine label (handle pauses)\n",
     "        label = str(row['ORT']) if row['TOKEN'] >= 0 else '<p:>'\n",
     "        color = 'blue' if row['TOKEN'] >= 0 else 'green'\n",
     "        \n",
-    "        # Word/Pause boundary (solid)\n",
     "        ax1.axvline(start_sec, color=color, linewidth=2, alpha=0.6)\n",
     "        ax2.axvline(start_sec, color='cyan' if row['TOKEN'] >= 0 else 'lightgreen', linewidth=2, alpha=0.6)\n",
     "        \n",
-    "        # Label word/pause - positioned at y=-0.9 (bottom of waveform plot)\n",
     "        mid_sec = start_sec + (row['DURATION'] / (2 * sr))\n",
     "        ax1.text(mid_sec, -0.9, label, color=color, fontsize=12, fontweight='bold', horizontalalignment='center')\n",
     "\n",
-    "    # Final boundary line\n",
     "    ax1.axvline(len(y)/sr, color='gray', linestyle='--', alpha=0.3)\n",
     "    ax2.axvline(len(y)/sr, color='white', linestyle='--', alpha=0.3)\n",
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
+    "    plt.close(fig) # Prevent double display\n",
     "    display(Audio(y, rate=sr))"
    ],
    "execution_count": null
@@ -167,10 +150,11 @@
     "output_plot = widgets.Output()\n",
     "output_table = widgets.Output()\n",
     "\n",
-    "def update_segments(*args):\n",
+    "def update_segments(change):\n",
     "    speaker_id = speaker_select.value\n",
     "    segments = SPEAKER_DATA[speaker_id]\n",
     "    segment_select.options = [s['stem'] for s in segments]\n",
+    "    \n",
     "    with output_table:\n",
     "        output_table.clear_output()\n",
     "        df_summary = pd.DataFrame(segments)\n",
@@ -184,8 +168,12 @@
     "\n",
     "speaker_select.observe(update_segments, 'value')\n",
     "segment_select.observe(on_selection_change, 'value')\n",
-    "update_segments()\n",
-    "display(widgets.VBox([speaker_select, segment_select, output_table, output_plot]))"
+    "\n",
+    "# Display UI\n",
+    "display(widgets.VBox([speaker_select, segment_select, output_table, output_plot]))\n",
+    "\n",
+    "# Initial population\n",
+    "update_segments(None)"
    ],
    "execution_count": null
   }
