fix: resolve tripled output in check_alignment.ipynb by improving display logic

--- a/data_prepare/check_alignment.ipynb
+++ b/data_prepare/check_alignment.ipynb
@@ -28,7 +28,10 @@
     "# Add project root to sys.path\n",
     "sys.path.append(os.path.abspath('..'))\n",
     "\n",
-    "from data_prepare.audio_utils import get_sampling_rate"
+    "from data_prepare.audio_utils import get_sampling_rate\n",
+    "\n",
+    "# Use inline backend explicitly\n",
+    "%matplotlib inline"
    ],
    "execution_count": null
   },
@@ -94,6 +97,7 @@
     "    y, sr = librosa.load(wav_path, sr=None)\n",
     "    df = pd.read_csv(csv_path, sep=';')\n",
     "    \n",
+    "    # Create figure without showing it yet\n",
     "    fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(15, 8), sharex=True)\n",
     "    \n",
     "    librosa.display.waveshow(y, sr=sr, ax=ax1, alpha=0.5)\n",
@@ -104,6 +108,7 @@
     "    librosa.display.specshow(D, sr=sr, x_axis='time', y_axis='hz', ax=ax2)\n",
     "    ax2.set_ylabel(\"Hz\")\n",
     "    \n",
+    "    # Boundaries and Labels\n",
     "    for _, row in df.iterrows():\n",
     "        start_sec = row['BEGIN'] / sr\n",
     "        ax1.axvline(start_sec, color='gray', linestyle='--', alpha=0.3)\n",
@@ -133,8 +138,10 @@
     "    ax2.axvline(len(y)/sr, color='white', linestyle='--', alpha=0.3)\n",
     "\n",
     "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "    plt.close(fig) # Prevent double display\n",
+    "    \n",
+    "    # Use display() instead of plt.show() to have better control in Output widget\n",
+    "    display(fig)\n",
+    "    plt.close(fig) \n",
     "    display(Audio(y, rate=sr))"
    ],
    "execution_count": null
@@ -150,30 +157,45 @@
     "output_plot = widgets.Output()\n",
     "output_table = widgets.Output()\n",
     "\n",
-    "def update_segments(change):\n",
+    "def update_segments(change=None):\n",
     "    speaker_id = speaker_select.value\n",
-    "    segments = SPEAKER_DATA[speaker_id]\n",
+    "    segments = SPEAKER_DATA.get(speaker_id, [])\n",
+    "    \n",
+    "    # Update segment list\n",
     "    segment_select.options = [s['stem'] for s in segments]\n",
     "    \n",
+    "    # Show summary table\n",
     "    with output_table:\n",
-    "        output_table.clear_output()\n",
-    "        df_summary = pd.DataFrame(segments)\n",
-    "        display(df_summary)\n",
+    "        clear_output(wait=True)\n",
+    "        display(pd.DataFrame(segments))\n",
     "\n",
-    "def on_selection_change(change):\n",
+    "def on_selection_change(change=None):\n",
+    "    if change and change['type'] != 'change' or change['name'] != 'value':\n",
+    "        return\n",
+    "        \n",
     "    with output_plot:\n",
-    "        output_plot.clear_output(wait=True)\n",
+    "        clear_output(wait=True)\n",
     "        if segment_select.value:\n",
     "            plot_alignment(segment_select.value)\n",
     "\n",
-    "speaker_select.observe(update_segments, 'value')\n",
-    "segment_select.observe(on_selection_change, 'value')\n",
+    "# Observers\n",
+    "speaker_select.observe(update_segments, names='value')\n",
+    "segment_select.observe(on_selection_change, names='value')\n",
     "\n",
-    "# Display UI\n",
-    "display(widgets.VBox([speaker_select, segment_select, output_table, output_plot]))\n",
+    "# Display UI Layout\n",
+    "display(widgets.VBox([\n",
+    "    speaker_select, \n",
+    "    segment_select, \n",
+    "    widgets.HTML(\"<b>Segments for selected speaker:</b>\"),\n",
+    "    output_table, \n",
+    "    widgets.HTML(\"<hr>\"),\n",
+    "    output_plot\n",
+    "]))\n",
     "\n",
-    "# Initial population\n",
-    "update_segments(None)"
+    "# Manual trigger for initial display\n",
+    "update_segments()\n",
+    "if segment_select.value:\n",
+    "    on_selection_change({'type': 'change', 'name': 'value'})"
    ],
    "execution_count": null
   }
