--- a/data_prepare/check_alignment.ipynb
+++ b/data_prepare/check_alignment.ipynb
@@ -88,10 +88,16 @@
    "source": [
     "def plot_alignment(stem):\n",
     "    wav_path = Path(DATA_DIR) / f\"{stem}.wav\"\n",
+    "    \n",
+    "    # Check for CSV in multiple locations\n",
     "    csv_path = Path(DATA_DIR) / f\"{stem}.csv\"\n",
+    "    if not csv_path.exists():\n",
+    "        # Check subfolder\n",
+    "        csv_path = Path(DATA_DIR) / \"ali_phoneme\" / f\"{stem}.csv\"\n",
     "    \n",
     "    if not wav_path.exists() or not csv_path.exists():\n",
     "        print(f\"Error: Missing files for {stem}\")\n",
+    "        print(f\"WAV: {wav_path.exists()}, CSV: {csv_path.exists()} (Checked: {csv_path})\")\n",
     "        return\n",
     "    \n",
     "    y, sr = librosa.load(wav_path, sr=None)\n",
@@ -138,8 +144,6 @@
     "    ax2.axvline(len(y)/sr, color='white', linestyle='--', alpha=0.3)\n",
     "\n",
     "    plt.tight_layout()\n",
-    "    \n",
-    "    # Use display() instead of plt.show() to have better control in Output widget\n",
     "    display(fig)\n",
     "    plt.close(fig) \n",
     "    display(Audio(y, rate=sr))"
