chore: final updates to check_alignment.ipynb for file location flexibility

--- a/data_prepare/check_alignment.ipynb
+++ b/data_prepare/check_alignment.ipynb
@@ -3,14 +3,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Alignment Checker\n\nThis notebook allows you to interactively check the audio-to-phoneme alignment for segmented recordings."
-   ],
-   "execution_count": null
+    "# Alignment Checker\n",
+    "\n",
+    "This notebook allows you to interactively check the audio-to-phoneme alignment for segmented recordings."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,24 +33,25 @@
     "\n",
     "# Use inline backend explicitly\n",
     "%matplotlib inline"
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CONFIGURATION\n",
-    "DATA_DIR = '../datalocal/v260210_24kHz/readtext_split'\n",
+    "#DATA_DIR = '../datalocal/v260210_24kHz/readtext_split'\n",
+    "DATA_DIR = '../datalocal/v260210_24kHz/sentences'\n",
     "\n",
     "if not Path(DATA_DIR).exists():\n",
     "    print(f\"Warning: DATA_DIR {DATA_DIR} not found. Please run the segmentation script first.\")"
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,11 +80,11 @@
     "\n",
     "SPEAKER_DATA = get_speaker_data(DATA_DIR)\n",
     "SPEAKER_LIST = sorted(list(SPEAKER_DATA.keys()))"
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,13 +149,28 @@
     "    display(fig)\n",
     "    plt.close(fig) \n",
     "    display(Audio(y, rate=sr))"
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bcb91d61b7a54ae2b9d56747e5d6c9c1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Dropdown(description='Speaker:', options=('001PD', '002PD', '003PD', '004PD', '005PD', '006PD',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# INTERACTIVE WIDGETS\n",
     "speaker_select = widgets.Dropdown(options=SPEAKER_LIST, description='Speaker:')\n",
@@ -200,8 +217,14 @@
     "update_segments()\n",
     "if segment_select.value:\n",
     "    on_selection_change({'type': 'change', 'name': 'value'})"
-   ],
-   "execution_count": null
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
