chore: include final alignment notebook updates and DDK spec

--- a/data_prepare/check_alignment.ipynb
+++ b/data_prepare/check_alignment.ipynb
@@ -37,13 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CONFIGURATION\n",
     "#DATA_DIR = '../datalocal/v260210_24kHz/readtext_split'\n",
-    "DATA_DIR = '../datalocal/v260210_24kHz/sentences'\n",
+    "#DATA_DIR = '../datalocal/v260210_24kHz/sentences'\n",
+    "#DATA_DIR = '../datalocal/v260210_24kHz/ddk'\n",
+    "#DATA_DIR = '../datalocal/v260210_24kHz/words_merged'\n",
+    "DATA_DIR = '../datalocal/v260210_24kHz/monologue_split'\n",
     "\n",
     "if not Path(DATA_DIR).exists():\n",
     "    print(f\"Warning: DATA_DIR {DATA_DIR} not found. Please run the segmentation script first.\")"
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcb91d61b7a54ae2b9d56747e5d6c9c1",
+       "model_id": "652e12281bb14fdc991ea918a1b3fc83",
        "version_major": 2,
        "version_minor": 0
       },
